--- a/app/index.html
+++ b/app/index.html
@@ -62,9 +62,9 @@
                     <tbody>
                         <tr>
                             <td></td>
-                            <td>$ total EPS</td>
-                            <td>$ change in book value</td>
-                            <td>$ total dividends</td>
+                            <td>total EPS</td>
+                            <td>% change in book value</td>
+                            <td>total dividends</td>
                         </tr>
                         <tr>
                             <td></td>
